Visualisation des tutos en béta (fix #926)
Ce qui a été fait :
- Créations de nouvelles urls de visualisation de la béta
  ("tutoriels/beta/<pk>/<slug>/...") dans urls.py pour donner
  accès au différentes pages (dans /zds/tutorials/)
- Modification des modèles pour intégrer les fonctions
  get_absolute_url_beta() dans models.Py (dans /zds/tutorial/)
- Ajout des fonctions view_*_beta() pour tutorial, part
  et chapter dans views.py afin d'afficher ce qu'il faut en
  mode beta (à partir du repository et de tutorial.sha_beta)
  + ajout d'une fonction update_beta() qui met à jour la béta
  d'un tutoriel (dans /zds/tutorial/)
- Modification des templates view_online.html pour tutorial
  part et chapter afin de permettre la visualisation de ces tutos
  en béta, avec une variable "beta" transmise par view_*_beta()
  (dans /templates/tutorials/*/)
- Édition de summary.part.html pour qu'il tienne compte de
  l'existence d'un mode beta (dans /templates/tutorial/includes/)
  + corrections d'erreurs sur le placement des appostrophes
  (le "?version" n'était pas actif sur les tutos en "off").
- Édition de beta.html (dans /templates/tutorials/member/) pour
  pointer vers les versions béta de chaque utilisateur.
  + correction d'un bug : l'intro qui était affichée était celle
  de la version actuelle (en "off") du tutoriel et non celle de
  la version béta.
- Édition de chapter_pager.part.html afin de tenir compte de
  l'existence du mode béta (dans /templates/tutorial/includes/)
- Tentative de tenir compte d'un maximum de remarques flak et
  pep8

--- a/templates/tutorial/includes/part.part.html
+++ b/templates/tutorial/includes/part.part.html
@@ -6,15 +6,21 @@
     {% with authors=tutorial.authors.all %}
         {% with chapters=part.chapters %}            
             {% if part.intro %}
-                {{ part.intro|safe }}
+                {% if beta %}
+                    {{ part.intro|emarkdown }}
+                {% else %}
+                    {{ part.intro|safe }}
+                {% endif %}
             {% endif %}
 
             <ul>
                 {% for chapter in chapters %}
                     <li>
                         <h3>
-                            <a href="
-                                {% if online %}
+                            <a href=" 
+                                {% if beta %}
+                                    {% url "view-chapter-url-beta" tutorial.pk tutorial.slug part.slug chapter.slug %}{% if version %}?version={{version}}{% endif %}
+                                {% elif online %}
                                     {% url "view-chapter-url-online" tutorial.pk tutorial.slug part.slug chapter.slug %}
                                 {% else %}
                                     {% url "view-chapter-url" tutorial.pk tutorial.slug part.slug chapter.slug %}
@@ -28,7 +34,9 @@
                                 <li>
                                     <h4>
                                         <a href="{% spaceless %}
-                                            {% if online %}
+                                            {% if beta %}
+                                                {% url "view-chapter-url-beta" tutorial.pk tutorial.slug part.slug chapter.slug %}{% if version %}?version={{version}}{% endif %}
+                                            {% elif online %}
                                                 {% url "view-chapter-url-online" tutorial.pk tutorial.slug part.slug chapter.slug %}
                                             {% else %}
                                                 {% url "view-chapter-url" tutorial.pk tutorial.slug part.slug chapter.slug %}
@@ -43,9 +51,13 @@
                     </li>
                 {% endfor %}
             </ul>
-
+            
             {% if part.conclu %}
-                {{ part.conclu|safe }}
+                {% if beta %}
+                    {{ part.conclu|emarkdown }}
+                {% else %}
+                    {{ part.conclu|safe }}
+                {% endif %}
             {% endif %}
         {% endwith %}
     {% endwith %}
