--- a/templates/tutorial/member/beta.html
+++ b/templates/tutorial/member/beta.html
@@ -1,6 +1,7 @@
 {% extends "tutorial/base_online.html" %}
 {% load profile %}
 {% load emarkdown %}
+{% load repo_reader %}
 
 
 
@@ -39,7 +40,7 @@
                 <tr>
                     <td>
                         <img src="{{ tuto.thumbnail.url }}" alt="">
-                        <a href="{{ tuto.get_absolute_url_beta }}">{{ tuto.title }}</a> 
+                        <a href="{{ tuto.get_absolute_url_beta }}{% if tuto.sha_beta %}?version={{tuto.sha_beta}}{% endif %}">{{ tuto.title }}</a> 
                         {% if tuto.description %}
                             <p>
                                 {{ tuto.description }}
@@ -47,7 +48,9 @@
                         {% endif %}
                     </td>
                     <td>
-                        {{ tuto.get_introduction|truncatechars:200|emarkdown }}
+                        {% with tuto_version=tuto|repo_tuto:tuto.sha_beta %}
+                            {{ tuto_version.introduction|truncatechars:200|emarkdown }}
+                        {% endwith %}
                     </td>
                 </tr>
             {% endfor %}
