--- a/templates/tutorial/tutorial/view_online.html
+++ b/templates/tutorial/tutorial/view_online.html
@@ -3,6 +3,7 @@
 {% load profile %}
 {% load captureas %}
 {% load set %}
+{% load repo_reader %}
 
 
 
@@ -33,13 +34,29 @@
     {% endif %}
 
     {% include 'tutorial/includes/tags_authors.part.html' with tutorial=tutorial %}
+    
+    {% if beta %}
+        <div class="content-wrapper">
+            <div class="alert-box warning">
+                Attention, cette version du tutoriel est en BETA !
+            </div>
+        </div>
+    {% endif %}
 {% endblock %}
 
 
 
 {% block content %}
-    {% if tutorial.get_introduction_online %}
-        {{ tutorial.get_introduction_online|safe }}
+    {% if beta %}
+        {% with tuto_version=tutorial|repo_tuto:version %}
+            {% if tuto_version.introduction %}
+                {{ tuto_version.introduction|emarkdown }}
+            {% endif %}
+        {% endwith %}
+    {% else %}
+        {% if tutorial.get_introduction_online %}
+            {{ tutorial.get_introduction_online|safe }}
+        {% endif %}
     {% endif %}
 
     {% if tutorial.type == 'MINI' %}
@@ -52,7 +69,13 @@
         {% if parts %}
             {% for part in parts %}
                 <h2>
-                    <a href="{% url "view-part-url-online" tutorial.pk tutorial.slug part.slug %}">
+                    <a href="
+                  {% if beta %}
+                      {% url "view-part-url-beta" tutorial.pk tutorial.slug part.slug %}{% if version %}?version={{version}}{% endif %}
+                  {% else %}
+                      {% url "view-part-url-online" tutorial.pk tutorial.slug part.slug %}
+                  {% endif %}
+                  ">
                         Partie {{ part.position_in_tutorial }} : {{ part.title }}
                     </a>
                 </h2>
@@ -67,61 +90,71 @@
 
     {% endif %}
 
-    {% if tutorial.get_conclusion_online %}
-        {{ tutorial.get_conclusion_online|safe }}
+    {% if beta %}
+        {% with tuto_version=tutorial|repo_tuto:version %}
+            {% if tuto_version.conclusion %}
+                {{ tuto_version.conclusion|emarkdown }}
+            {% endif %}
+        {% endwith %}
+    {% else %}
+        {% if tutorial.get_conclusion_online %}
+            {{ tutorial.get_conclusion_online|safe }}
+        {% endif %}
     {% endif %}
 {% endblock %}
 
 
 
 {% block content_after %}
-    <h2 class="reactions-title">Commentaires</h2>
+    {% if not beta %}
+        <h2 class="reactions-title">Commentaires</h2>
 
 
-    {% include "misc/pagination.part.html" with position="top" topic=tutorial is_online=True %}
+        {% include "misc/pagination.part.html" with position="top" topic=tutorial is_online=True %}
 
 
-    {% for message in notes %}
-        {% captureas edit_link %}
-            {% url "zds.tutorial.views.edit_note" %}?message={{ message.pk }}
+        {% for message in notes %}
+            {% captureas edit_link %}
+                {% url "zds.tutorial.views.edit_note" %}?message={{ message.pk }}
+            {% endcaptureas %}
+
+            {% captureas cite_link %}
+                {% url "zds.tutorial.views.answer" %}?tutorial={{ tutorial.pk }}&amp;cite={{ message.pk }}
+            {% endcaptureas %}
+
+            {% captureas upvote_link %}
+                {% url "zds.tutorial.views.like_note" %}?message={{ message.pk }}
+            {% endcaptureas %}
+
+            {% captureas downvote_link %}
+                {% url "zds.tutorial.views.dislike_note" %}?message={{ message.pk }}
+            {% endcaptureas %}
+
+            {% captureas alert_solve_link %}
+                {% url "zds.tutorial.views.solve_alert" %}
+            {% endcaptureas %}
+
+            {% if forloop.first and nb > 1 %}
+                {% set True as is_repeated_message %}
+            {% else %}
+                {% set False as is_repeated_message %}
+            {% endif %}
+
+
+            {% include "misc/message.part.html" with perms_change=perms.tutorial.change_note topic=tutorial %}
+        {% endfor %}
+
+
+        {% include "misc/pagination.part.html" with position="bottom" topic=tutorial is_online=True %}
+
+
+        
+        {% captureas form_action %}
+            {% url 'zds.tutorial.views.answer' %}?tutorial={{ tutorial.pk }}
         {% endcaptureas %}
 
-        {% captureas cite_link %}
-            {% url "zds.tutorial.views.answer" %}?tutorial={{ tutorial.pk }}&amp;cite={{ message.pk }}
-        {% endcaptureas %}
-
-        {% captureas upvote_link %}
-            {% url "zds.tutorial.views.like_note" %}?message={{ message.pk }}
-        {% endcaptureas %}
-
-        {% captureas downvote_link %}
-            {% url "zds.tutorial.views.dislike_note" %}?message={{ message.pk }}
-        {% endcaptureas %}
-
-        {% captureas alert_solve_link %}
-            {% url "zds.tutorial.views.solve_alert" %}
-        {% endcaptureas %}
-
-        {% if forloop.first and nb > 1 %}
-            {% set True as is_repeated_message %}
-        {% else %}
-            {% set False as is_repeated_message %}
-        {% endif %}
-
-
-        {% include "misc/message.part.html" with perms_change=perms.tutorial.change_note topic=tutorial %}
-    {% endfor %}
-
-
-    {% include "misc/pagination.part.html" with position="bottom" topic=tutorial is_online=True %}
-
-
-    
-    {% captureas form_action %}
-        {% url 'zds.tutorial.views.answer' %}?tutorial={{ tutorial.pk }}
-    {% endcaptureas %}
-
-    {% include "misc/message_form.html" with member=user %}
+        {% include "misc/message_form.html" with member=user %}
+     {% endif %}
 {% endblock %}
 
 
