--- a/templates/tutorial/tutorial/view.html
+++ b/templates/tutorial/tutorial/view.html
@@ -120,7 +120,7 @@
         <form action="{% url "zds.tutorial.views.modify_tutorial" %}" method="post" class="modal modal-small" id="add-author">
             {% csrf_token %}
             <input type="text" name="author" placeholder="Pseudo de l'utilisateur à ajouter" data-autocomplete="{ 'type': 'single' }">
-            <input type="hidden" name="tutorial" value="{{ tutorial.pk }}" />
+            <input type="hidden" name="tutorial" value="{{ tutorial.pk }}">
             <button type="submit" name="add_author">
                 Confirmer
             </button>
