Correction tuto part view online

--- a/templates/tutorial/tutorial/import.html
+++ b/templates/tutorial/tutorial/import.html
@@ -43,7 +43,7 @@
                     <tr>
                         <td>{{ titre }}</td>
                         <td>
-                            <form name="form-import" method="POST" action="{% url "zds.tutorial.views.local_import" %}">
+                            <form name="form-import" method="post" action="{% url "zds.tutorial.views.local_import" %}">
                                 <input type="hidden" name="tuto" value="{{ tutorial }}">
                                 <input type="hidden" name="images" value="{{ image }}">
                                 <input type="hidden" name="logo" value="{{ logo }}">
