--- a/templates/tutorial/part/view_online.html
+++ b/templates/tutorial/part/view_online.html
@@ -33,10 +33,14 @@
 
 {% block sidebar_blocks %}
     {% if perms.tutorial.change_tutorial %}
-        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administrations">
+        <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Administration">
             <h3>Admin<span class="wide">istration</span></h3>
             <ul>
-                <li><a href="{{ part.tutorial.get_absolute_url }}" class="ico-after offline blue">Version hors-ligne</a></li>
+                <li>
+                    <a href="{{ part.tutorial.get_absolute_url }}" class="ico-after offline blue">
+                        Version hors-ligne
+                    </a>
+                </li>
             </ul>
         </div>
     {% endif %}
