Factorisation des templates de validation

--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -545,10 +545,10 @@
 
     &.info, // TEMP PATCH WITH DJANGO ALERTS
     &.success {
-        background: #27ae60;
+        background: #48A200;
     }
     &.error {
-        background: #c0392b;
+        background: #C0392B;
     }
     &.alert, // TEMP PATCH WITH DJANGO ALERTS
     &.warning {
