--- a/templates/tutorial/validation/history.html
+++ b/templates/tutorial/validation/history.html
@@ -32,16 +32,14 @@
                     <th width="8%">Catégorie(s)</th>
                     <th width="8%">Auteur(s)</th>
                     <th width="8%">Proposé</th>
-                    <th width="8%">Validateur</th>
-                    <th width="8%">Statut</th>
-                    <th width="8%">Action</th>
+                    <th width="24%">Statut</th>
                 </tr>
             </thead>
             <tbody>
                 {% for validation in validations %}
                     <tr>
                         <td>
-                            <a href="{% url "zds.tutorial.views.view_tutorial" validation.tutorial.pk validation.tutorial.slug %}?version={{ validation.version }}" >
+                            <a href="{% url "zds.tutorial.views.view_tutorial" validation.tutorial.pk validation.tutorial.slug %}?version={{ validation.version }}">
                                 {{ validation.tutorial.title }}
                             </a>
                         </td>
@@ -63,41 +61,7 @@
                             <span>{{ validation.date_proposition|format_date|capfirst }}</span>
                         </td>
                         <td>
-                            {% if validation.validator %}
-                                <a href="{% url "zds.member.views.details" validation.validator.username %}">
-                                    {{ validation.validator.username }}
-                                </a>
-                            {% endif %}
-                        </td>
-                        <td>
-                            {% if validation.date_reserve %}
-                                <span>
-                                    {{ validation.date_reserve|format_date|capfirst }}
-                                </span>
-                            {% endif %}
-                        </td>
-                        <td>
-                            {% if validation.is_pending %}
-                                <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">
-                                    Réserver
-                                </a>
-                            {% elif validation.is_pending_valid %}
-                                <a href="#unreservation" class="open-modal">
-                                    Annuler la réservation
-                                </a>
-                                <form action="{% url "zds.tutorial.views.reservation" validation.pk %}" class="modal modal-small" id="unreservation">
-                                    <p>
-                                        Le tutoriel est actuellement réservé par {% include "misc/member_item.part.html" with member=validation.validator %}, êtes-vous certains de vouloir <strong>annuler la réservation</strong> ?
-                                    </p>
-                                    <button type="submit">
-                                        Confirmer
-                                    </button>
-                                </form>
-                            {% elif validation.is_accept %}
-                                <span>Accepté</span>
-                            {% elif validation.is_reject %}
-                                <span>Rejeté</span>
-                            {% endif %}
+                            {% include "tutorial/includes/validation.part.html" %}
                         </td>
                     </tr>
                 {% endfor %}
