--- a/templates/tutorial/validation/index.html
+++ b/templates/tutorial/validation/index.html
@@ -32,9 +32,7 @@
                             <th width="8%">Catégorie(s)</th>
                             <th width="8%">Auteur(s)</th>
                             <th width="8%">Proposé</th>
-                            <th width="8%">Validateur</th>
-                            <th width="8%">Statut</th>
-                            <th width="8%">Action</th>
+                            <th width="24%">Statut</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -59,25 +57,7 @@
                                     <span>{{ validation.date_proposition|format_date|capfirst }}</span>
                                 </td>
                                 <td>
-                                    {% if validation.validator %}
-                                        {% include 'misc/member_item.part.html' with member=validation.validator avatar=True %}
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    {% if validation.date_reserve %}
-                                        <span>{{ validation.date_reserve|format_date|capfirst }}</span>
-                                    {% endif %}
-                                </td>
-                                <td>
-                                    {% if validation.is_pending %}
-                                        <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">Réserver</a>
-                                    {% elif validation.is_pending_valid %}
-                                        <a href="{% url "zds.tutorial.views.reservation" validation.pk %}">Annuler la réservation</a>
-                                    {% elif validation.is_accept %}
-                                        <span>Accepté</span>
-                                    {% elif validation.is_reject %}
-                                        <span>Rejeté</span>
-                                    {% endif %}
+                                    {% include "tutorial/includes/validation.part.html" %}
                                 </td>
                             </tr>
                         {% endfor %}
