--- a/templates/tutorial/validation/history.html
+++ b/templates/tutorial/validation/history.html
@@ -18,47 +18,32 @@
 
 
 {% block headline %}
+    {{ tutorial.title }}
+{% endblock %}
+
+
+{% block headline_sub %}
     Historique de validation
 {% endblock %}
 
 
 
 {% block content %}
+    {% include "tutorial/includes/tags_authors.part.html" %}
+
     {% if validations %}
-        <table>
+        <table class="fullwidth">
             <thead>
                 <tr>
-                    <th>Titre</th>
-                    <th width="8%">Catégorie(s)</th>
-                    <th width="8%">Auteur(s)</th>
-                    <th width="8%">Proposé</th>
-                    <th width="24%">Statut</th>
+                    <th width="50%">Proposé</th>
+                    <th width="50%">Statut</th>
                 </tr>
             </thead>
             <tbody>
                 {% for validation in validations %}
                     <tr>
                         <td>
-                            <a href="{% url "zds.tutorial.views.view_tutorial" validation.tutorial.pk validation.tutorial.slug %}?version={{ validation.version }}">
-                                {{ validation.tutorial.title }}
-                            </a>
-                        </td>
-                        <td>
-                            {% for subcategory in validation.tutorial.subcategory.all %}
-                                <a href="{% url "zds.tutorial.views.list_validation" %}?subcategory={{ subcategory.pk }}">
-                                    {{ subcategory.title }}
-                                </a>
-                            {% endfor %}
-                        </td>
-                        <td>
-                            {% for author in validation.tutorial.authors.all %}
-                                <a href="{% url "zds.member.views.details" user.username %}">
-                                    {{ author.username }}
-                                </a>
-                            {% endfor %}
-                        </td>
-                        <td>
-                            <span>{{ validation.date_proposition|format_date|capfirst }}</span>
+                            {{ validation.date_proposition|format_date|capfirst }}
                         </td>
                         <td>
                             {% include "tutorial/includes/validation.part.html" %}
