--- a/templates/tutorial/tutorial/view_online.html
+++ b/templates/tutorial/tutorial/view_online.html
@@ -144,7 +144,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#unpublish" class="ico-after open-modal cross blue">Dépublier</a>
+                    <a href="#unpublish" class="ico-after open-modal cross blue">
+                        Dépublier
+                    </a>
                     {# TODO_CSRF : passer en post #}
                     <form action="{% url "zds.tutorial.views.invalid_tutorial" tutorial.pk %}" method="get" class="modal modal-small" id="unpublish">
                         <p>
