--- a/templates/tutorial/part/view_online.html
+++ b/templates/tutorial/part/view_online.html
@@ -3,7 +3,7 @@
 
 
 {% block title %}
-    {{ part.title }} ({{ part.tutorial.title }})
+    {{ part.title }} - {{ part.tutorial.title }}
 {% endblock %}
 
 
