Correction du 'Ne plus suivre'

--- a/templates/forum/base.html
+++ b/templates/forum/base.html
@@ -61,11 +61,19 @@
                     {% with topics=user|followed_topics %}
                         {% for topic in topics %}
                             <li>
-                                <a href="{% url "zds.forum.views.edit" %}?topic={{ topic.pk }}&page=1&follow=1" 
-                                   class="ico-after cross red stop-follow action-hover" 
-                                   data-title="Ne plus suivre">
-                                    Ne plus suivre
-                                </a>
+                                {# TODO_CSRF : passer en post #}
+                                <form action="{% url "zds.forum.views.edit" %}" method="get">
+
+                                    {# Il faudra peut-être repasser ces paramètres en get #}
+                                    <input type="hidden" name="topic" value="{{ topic.pk }}">
+                                    <input type="hidden" name="nb" value="{{ nb }}">
+                                    <input type="hidden" name="follow" value="1">
+
+                                    <button class="ico-after cross red stop-follow action-hover" 
+                                            data-title="Ne plus suivre">
+                                        Ne plus suivre
+                                    </button>
+                                </form>
                                 
                                 <a href="{% spaceless %}
                                     {% with first_unread=topic.first_unread_post %}
