--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -118,8 +118,11 @@ a {
     text-indent: -9999px;
 }
 
-nav ul, nav ol {
-    list-style: none;
+nav {
+    ul,
+    ol {
+        list-style: none;
+    }
 }
 
 
